<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TripSkuy</string>
    <string name="login">Login</string>
    <string name="email">Masukkan Email</string>
    <string name="password">Masukkan Password</string>
    <string name="login_btn">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="atau_login_dengan">Atau Login dengan</string>
    <string name="register">Daftar</string>
    <string name="name">Masukkan Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="atau_daftar_dengan">Atau Daftar dengan</string>
    <string name="register_button">Daftar</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="verification">Verification</string>
    <string name="otp_sent_message">We sent a 6-digit OTP to your email</string>
    <string name="verify">Verify</string>
    <string name="kirim_ulang_otp">Kirim Ulang OTP</string>
    <string name="masukkan_otp">Masukkan OTP</string>
    <string name="masukkan_kode_otp">Masukkan Kode OTP</string>
    <string name="imageverify">ImageVerify</string>
    <string name="greeting">Selamat Datang Di TripSkuy</string>
    <string name="Logo">Logo</string>
    <string name="welcome">Selamat datang, %1$s!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">img_provile</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_help">Help</string>
    <string name="title_detail">Analysis Detail</string>
    <string name="title_about">About App</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_guide">Guide</string>
    <string name="user_name">Admin</string>
    <string name="user_email">Admin123@gmail.com</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="rate_app">Rate App</string>
    <string name="search">Search...</string>
    <string name="temperature">31°</string>
    <string name="travel">Travel</string>
    <string name="hotel">Hotel</string>
    <string name="resto">Resto</string>
    <string name="travel_recommendations">Travel Recommendations</string>
    <string name="nearby_accommodation">Nearby Accommodation</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="english_lang">English</string>
    <string name="idn_lang">Bahasa Indonesia</string>
    <string name="choose_lang">Choose Language</string>
    <string name="btn_save">Save</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="btn_search">Search</string>
    <string name="explore_your_world">Jelajai Duniamu</string>
    <string name="hint_city">Kota</string>
    <string name="hint_category">Kategori</string>
    <string name="hint_budget">Budget</string>
    <string name="favorites">Favorites</string>
    <string name="location">Kartasura</string>
    <string name="name_place">The Heritage Palace</string>
    <string name="item_location">Jl. Permata Raya Dukuh Tegal Mulyo, Palalan, Kartasura, Sukoharjo</string>
    <string name="item_description">The  Heritage Palace ini dibangun sebagai wahana wisata keluarga, jadi cocok  banget kamu kunjungi bersama keluarga. Uniknya juga ada berbagai macam  mobil antik yang terpajang rapi di halaman loh. Kawasan The Heritage  Palace ini adalah bangunan cagar budaya bekas pabrik gula peninggalan  jaman kolonial Belanda, sudah berdiri sejak 1892 dengan luas sekitar 2,2 hektar.
                                    Sedikitnya ada 9 bangunan kuno di area bekas pabrik gula tersebut, bahkan masih  lengkap dengan cerebong asapnya setinggi 20 meter. Akan tetapi baru 3  bangunan ya yang dibuka untuk umum. Nah di halaman luarnya dijadikan  museum transportasi dan banyak memajang mobil-mobil kuno. Seperti Mobil  Dodge buatan tahun 1948 yang pernah digunakan Ir. Soekarno, mobil  pemadam kebakaran Dodge Power 1963, dan masih banyak lagi..</string>
    <string name="open_schedule">09:00 – 16:00</string>
    <string name="gallery">Gallery</string>
    <string name="guide_map">Dapatkan Petunjuk Arah</string>
    <string name="sudah_punya_akun_sign_in">Sudah Punya akun? Sign In</string>
    <string name="place_image">Gambar Tempat</string>
    <string name="place_name">Place Name</string>
    <string name="place_description">Place description</string>
    <string name="welcome_text">Hi, User!</string>
    <string name="location_text">Jakarta, Indonesia</string>
    <string name="weather_text">25°C, Clear Sky</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="hotel_name">Name Hotel</string>
    <string name="hotel_category">Category Hotel</string>
    <string name="hotel_price">Price Hotel</string>
    <string name="hotel_features">Hotel Features</string>
    <string name="hotel_rating">Hotel Rating</string>
    <string name="place_ticket">Place Ticket</string>
    <string name="place_rating">Place Rating</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
