<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:radius="8dp"
    app:cardCornerRadius="16dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_place"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            app:shapeAppearanceOverlay="@style/RoundedCornersImage"
            android:contentDescription="@string/place_image" />

        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_place_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_ticket"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_place_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_rating"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_weight="2"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_place_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_description"
            android:maxLines="3"
            android:textSize="12sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
