<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/change_password"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordLama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/labelOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordLama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLama"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordBaru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/labelNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordBaru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordBaru"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputKonfirmasiPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/labelConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextKonfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:padding="12dp"
        android:text="@string/btn_save"
        android:textColor="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputKonfirmasiPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
